2.0:
NEW: Clean history button
NEW: Open new tab in background - settings option
NEW: Kiwix search home screen widget
NEW: Download manager
NEW: Improved ZIM management
NEW: Build against newer version of Android NDK/SDK
FIXED: Opening problem with ZIM filenames with special characters
FIXED: Useless "w820dp" language
FIXED: Failing he, id, yi locales
FIXED: Non-localised setting language list sorting
FIXED: Multiple search history problems
FIXED: Crashes with 'Twillight' app

1.99
FIXED: ZIM load error on ICS

1.98
FIXED: Bookmark icon correctly updates when switching tabs
NEW: Tabs reopen as you left them after app restart
NEW: Undo tab deletions with one click
NEW: Table of contents for articles accessed by swiping left
NEW: Improved Bookmark System
NEW: Back and forward buttons show as disabled if unusable
NEW: Real time permission requests for Marshmallow
NEW: Asks the user if they would consider rating the app

1.97
FIXED: Soft-keyboard opens on "find in page" click
FIXED: "Back to Top" button fades out after 1.5 seconds
NEW: App can be moved to SD card
NEW: ARM64 support
NEW: Beta full-text search (put the *.idx" directory beside the ZIM)
NEW: Restart with last open article on exact same position
NEW: Click on app title displays the search input box
NEW: Remember fullscreen setting over app restarts
NEW: Few additional languages supported for the UI
NEW: Build against newer version of Android NDK/SDK

1.96
FIXED: Freezes with long press on text
FIXED: Duplicates in suggestions list

1.95
FIXED: Crash with the Settings

1.94
NEW: Revamped tabs system
NEW: Revamped zoom system
NEW: Audio/Video suport
NEW: Updated "Ray Charles" ZIM demo file
FIXED: AutoCompleteTextView in landscape mode
FIXED: PDF & EPUB viewing
REMOVED: Gingerbread support
REMOVED: Share with friends
REMOVED: Zoom button

1.93
* FIXED: blanck pages and broken images on Android 5.0 (Lollipop)
* KNOWN BUG: text rewrapping problem with 4.4 & 5.0

1.92
* NEW: text2speech (TTS)