@@ -5,6 +5,7 @@ NEW: Kiwix search home screen widget
 NEW: Download manager
 NEW: Improved ZIM management
 NEW: Build against newer version of Android NDK/SDK
+NEW: Bookmarks for multiple articles with the same title can be created
 FIXED: Opening problem with ZIM filenames with special characters
 FIXED: Useless "w820dp" language
 FIXED: Failing he, id, yi locales
